2015-11-05  Karl Berry  <karl@tug.org>

	* data/dvipdfmx.cfg (D): add -dAutoRotatePages=/None.
	Suggestion/request from Akira, 4 Nov 2015 22:41:14.

2015-09-27  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Remove conditional error message in kpathsea_debug,
	since there should be no errors.

2015-08-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Most .c and .h files: Update Copyright years.
	Replace '(unsigned) long' by '(unsigned) int' or '(u)int32_t'
	except when needed with for ftell() and fseek().

2015-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* agl.[ch], cid.[ch], cidtype0.[ch], cidtype2.[ch], cmap_p.h,
	cs_type2.[ch], dpxcrypt.[ch], dpxutil.[ch], dvi.c, fontmap.[ch],
	otl_conf.c, pdfcolor..[ch], pdfdev.h, pdfdoc.c, pdfencoding.c,
	pdfencrypt.[ch], pdfnames.[ch], pdfobj.[ch], sfnt.h, spc_pdfm.c,
	spc_xtx.c, truetype.c, t1_char.[ch], tt_cmap.[ch], unicode.[ch]:
	No reason to use 'long' for 32-bit integers.

	* system.h: Moved #undef's for Win32 symbols from here ...
	* error.h, mpost.c: ... to here.

2015-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfmx.c (main): Drop CDECL.
	* agl.c, otl_opt.c, pdfencoding.c, pdfnames.c, pdfobj.c,
	t1_char.c, tt_cmap.c, tt_glyf.c:
	Replace 'static <TYPE> CDECL' => 'static inline <TYPE>'.
	* system.h: Drop __cdecl and CDECL.

2015-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfcolor.[ch]: Drop unused pdf_color_set_default().

	* pdfdev.h: Drop pdf_dev_setfont() and pdf_dev_set_colormode().

	* pdfdoc.[ch]: Drop unused pdf_doc_{end,make}_article().
	Declare pdf_doc_get_mediabox() as static.

	* pdfdraw.h: Drop pdf_dev_{fill,eofill,stroke,fillstroke}(), and
	pdf_dev_grestoreall().

	* pdfnames.[ch]: Declare printable_key() as static.

	* pdfximage.h: Drop pdf_ximage_disable_ebb().

	* tfm.[ch]: Drop tfm_get_space(). Skip tfm_string_{depth,height}.

	* tt_table.[ch]: Declare tt_get_name() as static.

2015-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
