@@ -1,3 +1,8 @@
+2015-12-24  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* t1_load.c: Support to download type1 fonts such as cmctt10.pfb
+	with complicated encoding.
+
 2015-11-05  Karl Berry  <karl@tug.org>
 
 	* data/dvipdfmx.cfg (D): add -dAutoRotatePages=/None.
